annotations swagger RendezVous
